1.2.0p3
    Mulitisite
    * Added "view" parameter to dashlet_pnpgraph webservice

    WATO
    * FIX: Fixed problem with complaining empty ListOf() valuespecs

1.2.1i1:
    Core:
    * Allow to add options to rules. Currently the options "disabled" and
      "comment" are allowed. Options are kept in an optional dict at the
      end of each rule.
    * parent scan: skip gateways that are reachable via PING
    * Allow subcheck to be in a separate file (e.g. foo.bar)
    * Contacts can now define *_notification_commands attributes which can now
      override the default notification command check-mk-notify
    * SNMP scan: fixed case where = was contained in SNMP info
    * check_imap_folder: new active check for searching for certain subjects
      in an IMAP folder
    * cmk -D shows multiple agent types e.g. when using SNMP and TCP on one host

    Checks & Agents:
    * New Checks for Siemens Blades (BX600)
    * New Checks for Fortigate Firewalls
    * Netapp Checks for CPU Util an FC Port throughput
    * FIX: megaraid_pdisks: handle case where no enclosure device exists
    * FIX: megaraid_bbu: handle the controller's learn cycle. No errors in that period.
    * mysql_capacity: cleaned up check, levels are in MB now
    * jolokia_info, jolokia_metrics: new rewritten checks for jolokia (formerly
      jmx4perl). You need the new plugin mk_jokokia for using them
    * added preliminary agent for OpenVMS (refer to agents/README.OpenVMS) 
    * vms_diskstat.df: new check file usage of OpenVMS disks
    * vms_users: new check for number of interactive sessions on OpenVMS
    * vms_cpu: new check for CPU utilization on OpenVMS
    * vms_if: new check for network interfaces on OpenVMS
    * vms_system.ios: new check for total direct/buffered IOs on OpenVMS
    * vms_system.procs: new check for number of processes on OpenVMS
    * vms_queuejobs: new check for monitoring current VMS queue jobs