@@ -1,9 +1,9 @@
 Title: WATO tags menue has issues when deleting tags
 Component: wato
-State: open
+Class: bug
+State: done
 Date: 2012-08-10 16:42:19
 Targetversion: future
-Class: bug
 
 If you create an empty tag (desc. and tag id) and then another one the empty tag will 
 corrupt the tag id's.
@@ -11,3 +11,6 @@ It seems this faulty state is also saved:
 If you delete another tag later on, all tags below the tag you're deleting are also lost.
 
 It's already verified to be a bug ;)
+
+2012-09-24 15:33:16: changed state open -> done
+It is not possible to define empty tag ids or descriptions anymore. Should be solved now.
