@@ -3,6 +3,7 @@
     * Added "view" parameter to dashlet_pnpgraph webservice
 
     WATO
+    * FIX: It is now possible to create clusters in empty folders
     * FIX: Fixed problem with complaining empty ListOf() valuespecs
 
 1.2.1i1:
